[package]
name = "kube-forward"
version = "0.4.7"
edition = "2021"
authors = ["Gabriel <kainlite@gmail.com>"]
description = "A persistent port-forward manager for Kubernetes"
license = "MIT"
repository = "https://github.com/kainlite/kube-forward"

[[bin]]
doc = false
name = "kube-forward"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Kubernetes dependencies
kube = { version = "0.98.0", features = ["runtime", "derive", "client", "config", "ws"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }

# Async runtime
tokio = { version = "1.35.1", features = ["full"] }

# Error handling
anyhow = "1.0.79"
thiserror = "2.0.11"

# Configuration
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# CLI
clap = { version = "4.4.13", features = ["derive"] }

metrics = "0.24"  
metrics-exporter-prometheus = "0.16"
metrics-util = "0.19" 
rustls = "0.23"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
humantime-serde = "1.1.1"
futures = "0.3"
tokio-stream = { version = "0.1.17", features = ["full"] }
socket2 = "0.5.8"
tempfile = "3.15.0"

[dev-dependencies]
tokio-test = "0.4.3"
tokio = { version = "1.0", features = ["full", "test-util"] }
ctor = "0.2.9"
